--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   "license": "UNLICENSED",
   "description": "",
   "scripts": {
-    "build": "npx tailwindcss -i ./styles/input.css -o ./styles/output.css --watch"
+    "build": "npm install tailwindcss && npx tailwindcss -i ./styles/input.css -o ./styles/output.css --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
