--- a/package.json
+++ b/package.json
@@ -102,6 +102,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./styles/input.css -o ./styles/output.css --watch"
+    "build": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --watch"
   }
 }
