--- a/package.json
+++ b/package.json
@@ -101,6 +101,6 @@
     "tailwindcss": "^3.4.3"
   },
   "scripts": {
-    "build": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --watch"
+    "build": "npx tailwindcss -i ./public/styles/main.css -o ./public/styles/output.css --watch"
   }
 }
